--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
       # Step 3: Install dependencies
       - name: Install dependencies
         run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+          cargo install stork-search --locked
           export STORKVERSION="v1.5.0"
           wget -O /usr/local/bin/stork https://files.stork-search.net/releases/$STORKVERSION/stork-macos-10-15
           chmod +x /usr/local/bin/stork
