--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           bash install.sh -y
           cargo search cargo--y install stork-search --locked
           export STORKVERSION="v1.6.0"
-          wget -O /usr/local/bin/stork https://files.stork-search.net/releases/$STORKVERSION/stork-macos-10-15
+          wget -O /usr/local/bin/stork https://github.com/jameslittle230/stork/releases/download/$STORKVERSION/stork-ubuntu-22-04
           chmod +x /usr/local/bin/stork
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" -y
           echo >> /home/runner/.bashrc
