--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs -o install.sh
           bash install.sh -y
-          cargo search cargo--y install stork-search --locked
+          cargo install --git https://github.com/jameslittle230/stork.git  --tag v1.6.0 --locked
           export STORKVERSION="v1.6.0"
           wget -O /usr/local/bin/stork https://github.com/jameslittle230/stork/releases/download/$STORKVERSION/stork-ubuntu-22-04
           chmod +x /usr/local/bin/stork
