--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,4 +60,4 @@ jobs:
       # Step 7: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         run: |
-          ghp-import -n -p --branch=master output
+          ghp-import -n -p -f --branch=master output
